<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardv"
        android:background="@drawable/ic_header_side_menu">

        <RelativeLayout
            android:background="@drawable/ic_header"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_header_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_toRightOf="@+id/back"
                android:text="Registrasi"
                android:layout_marginTop="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/putih" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/etuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="30dp"
        android:hint="@string/user"
        android:backgroundTint="@color/abu2"

        />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/pas"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/etuser"
        android:layout_marginTop="0dp"
        />

    <EditText
        android:id="@+id/etnope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpass"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="@string/nope" />

    <RadioButton
        android:id="@+id/rdb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etnope"
        android:layout_marginLeft="50dp"
        android:text="Male"
        android:textColor="@color/abu2"
        android:paddingLeft="30dp"/>

    <RadioButton
        android:id="@+id/rdb_female"
        android:textColor="@color/abu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etnope"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:text="Female"
        android:paddingLeft="15dp"/>

  <EditText
      android:id="@+id/et_blood"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:hint="Blood Type"
      android:layout_below="@+id/rdb_female"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="20dp"
      android:drawableRight="@drawable/ic_arrow_dropdown"
      />

    <EditText
        android:id="@+id/et_reshus"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="Reshus"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rdb_male"
        android:layout_marginLeft="30dp"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/ic_arrow_dropdown"
        />

    <EditText
        android:id="@+id/etpass_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reshus"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="Password"
        />

    <EditText
        android:id="@+id/etretype_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpass_regis"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="@string/retype"
        android:textColor="@color/abu2" />

    <RadioButton
        android:id="@+id/rdb_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etretype_regis"
        android:layout_marginLeft="50dp"
        android:text="Personal"
        android:textColor="@color/abu2"
        android:paddingLeft="30dp"/>

    <RadioButton
        android:id="@+id/rdb_orga"
        android:textColor="@color/abu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etretype_regis"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:text="Organization"
        android:paddingLeft="15dp"/>

    <EditText
        android:id="@+id/et_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdb_orga"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="@string/job"
        android:drawableRight="@drawable/ic_arrow_dropdown"
        android:textColor="@color/abu2" />

    <EditText
        android:id="@+id/et_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_job"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="@string/home"
        android:textColor="@color/abu2" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_home"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:hint="@string/location"
        android:drawableRight="@drawable/ic_blood_needed_location"
        android:textColor="@color/abu2" />

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_location"
        android:text="@string/agree"
        android:textColor="@color/abu2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnregis"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:text="@string/regis"
        android:textColor="@color/biruBakground"
        android:background="@drawable/custombuttonregister"
        android:layout_below="@+id/cb"
        android:layout_marginTop="10dp"/>





</RelativeLayout>